--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 
-title: Catbook #Your awesome title
-email: #youremail@domain.com
+title: Aakaori's Database #Your awesome title
+email: mkp2478@gmail.com #youremail@domain.com
 description: > # this means to ignore newlines until "baseurl"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 baseurl: # the subpath of the site
-url: http://starry99.github.io/catbook # the base hostname & protocol for your site
+url: https://mk2478.github.io/ # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
 timezone:
@@ -18,10 +18,10 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: #disqus shortname
 
 user:
-  name: Catbook
+  name: Aakaori
   pic: /assets/img/cat.jpg
   picAlt: "catbook"
-  job: a category-centric theme
+  job: NOW : Student
   aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
