--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ user:
   name: Aakaori
   pic: /assets/img/cat.jpg
   picAlt: "catbook"
-  job: NOW : Student
+  job: Student.
   aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
