--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: # the subpath of the site
 url: https://mk2478.github.io/ # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
-timezone:
+timezone: KR
 
 favicon: /assets/img/favicon.ico
 
@@ -20,7 +20,7 @@ disqus_shortname: #disqus shortname
 user:
   name: Aakaori
   pic: /assets/img/cat.jpg
-  picAlt: "catbook"
+  picAlt: "Aakaori"
   job: Student.
   aboutme: true # comment this out if you don't need the 'about' page.
 
