--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ disqus_shortname: #disqus shortname
 
 user:
   name: Aakaori
-  pic: /assets/img/cat.jpg
+  pic: /assets/img/.jpg
   picAlt: "Aakaori"
   job: Student.
   aboutme: true # comment this out if you don't need the 'about' page.
