--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: # the subpath of the site
 url: https://mk2478.github.io/ # the base hostname & protocol for your site
 
 permalink: /:year-:month/:title
-timezone: KR
+timezone: ROK
 
 favicon: /assets/img/favicon.ico
 
