--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: ROK
 favicon: /assets/img/favicon.ico
 
 google_analytics: #UA—XXXXXXXX-X
-disqus_shortname: #disqus shortname
+disqus_shortname: https-mk2478-github-io
 
 user:
   name: Aakaori
