--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: https-mk2478-github-io
 
 user:
-  name: Aakaori
-  pic: /assets/img/Aaa.jpg
+  name: Aakaori_Park MK
+  pic: /assets/img/Aaka_Profile.jpg
   picAlt: "Aakaori"
   job: Student.
   aboutme: true # comment this out if you don't need the 'about' page.
