--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: https-mk2478-github-io
 
 user:
-  name: Aakaori_Park MK
+  name: Aakaori(Park MK)
   pic: /assets/img/Aaka_Profile.jpg
   picAlt: "Aakaori"
   job: Student.
