--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ disqus_shortname: https-mk2478-github-io
 
 user:
   name: Aakaori(Park MK)
-  pic: /assets/img/Aaka_Profile.jpg
+  pic: /assets/img/Thug Crop.jpg
   picAlt: "Aakaori"
   job: Student.
   aboutme: true # comment this out if you don't need the 'about' page.
