--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: https-mk2478-github-io
 
 user:
-  name: Aakaori(Park MK)
+  name: Hyang_Dian
   pic: /assets/img/Thug Crop.jpg
-  picAlt: "Aakaori"
-  job: Student.
+  picAlt: "hyang_dian"
+  job: Biginner Programer.
   aboutme: true # comment this out if you don't need the 'about' page.
 
 exclude:
