--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ disqus_shortname: https-mk2478-github-io
 
 user:
   name: Hyang_Dian
-  pic: /assets/img/Thug Crop.jpg
+  pic: /assets/img/hyang_gif.gif
   picAlt: "hyang_dian"
   job: Biginner Programer.
   aboutme: true # comment this out if you don't need the 'about' page.
