--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
-title: Aakaori's Database #Your awesome title
+title: Hyang_dian's Basement #Your awesome title
 email: mkp2478@gmail.com #youremail@domain.com
-description: Aakaori's New Database.
+description: hyang_dian's basement
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
