--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ google_analytics: #UA—XXXXXXXX-X
 disqus_shortname: https-mk2478-github-io
 
 user:
-  name: Hyang_Dian
-  pic: /assets/img/hyang_gif.gif
-  picAlt: "hyang_dian"
+  name: Dian
+  pic: /assets/img/Thug_Crop.jpg
+  picAlt: "dian"
   job: Biginner Programmer.
   aboutme: true # comment this out if you don't need the 'about' page.
 
